<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Albi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_game_item_picker">GameItemPicker</string>
    <string name="title_activity_game_restocker">GameRestocker</string>
    <string name="title_activity_game_summary">GameSummary</string>
    <string name="title_activity_game_complete">GameComplete</string>
    <string name="thanksForPlaying">Thank you for playing!</string>
    <string name="greatJob">Great Job!</string>
    <string name="inventory">Inventory</string>
    <string name="product">Product</string>
    <string name="submitFixedDisplay">Submit Fixed Display</string>
    <string name="fixDisplay">Fix Display</string>
    <string name="pleaseDisplayTheFollowing">Please display the following SKUs</string>
    <string name="checkSpecificRack">Check Specific Rack</string>
    <string name="nextStep">Next Step</string>
    <string name="item">Item</string>
    <string name="sku">SKU</string>
    <string name="completeRack">Complete Rack</string>
    <string name="onDisplay">On display</string>
    <string name="outOfStock">Out Of Stock</string>
    <string name="inventoryControl">Inventory Control</string>
    <string name="rackSummary">Rack Summary</string>
    <string name="cont">Continue</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="options">Options</string>
    <string name="checkRandomRack">Check Random Rack</string>
    <string name="checkRack">Check Rack</string>
    <string name="albiCheck">Albi Check</string>
    <string name="start">Start</string>
    <string name="personalBest">Previous Best:\n-</string>
    <string name="title_activity_game_select_rack">GameSelectRack</string>
    <string name="title_activity_manage_users">ManageUsersActivity</string>
    <string name="changeUser">Change User</string>
    <string name="createUser">Create New User</string>
    <string name="createWeeklyReport">Create Weekly Report</string>

</resources>
