<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alfamarkt.albi.GameComplete">

    <TextView android:text="@string/greatJob" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_action_bar_title_text_size"/>

    <TextView android:text="@string/thanksForPlaying" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="147dp"
        android:layout_above="@+id/btnCompleteGame"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_action_bar_subtitle_text_size"/>

    <Button
        android:id="@+id/btnCompleteGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cont"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="finishGame"/>

</RelativeLayout>
